# xtensa-rust-quickstart

./: .gitignore  Cargo.toml  NOTES.md  README.md  build  build.rs  build_core  flash  flash_release  gen_asm  gen_core  memory.x  memory.x.bak  memory.x.in  openocd.cfg  openocd_flash.cfg  rust-toolchain  setenv  setenv.ps1  xtensa.gdb  xtensa.json  xtensa.x
.cargo/: config
examples/: esp32.rs  esp8266.rs  fma.rs
old_tools/: gen_asm  gen_core  gen_crate  gen_xbuild  xtensa.json
src/: main.rs
