[package]
name = "xtensa-quickstart"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2018"

[dependencies]
xtensa-lx-rt = "0.5.0"
xtensa-lx = "0.3.0"
panic-halt = "0.2.0"

[dev-dependencies]
esp32-hal = "0.2.0"
esp8266-hal = "0.3.2"

[[example]]
name = "esp32"
required-features = ["xtensa-lx-rt/lx6", "xtensa-lx/lx6"]

[[example]]
name = "esp8266"
required-features = ["xtensa-lx-rt/lx106", "xtensa-lx/lx106"]
